[package]
name = "redis_dequeuer_rs"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "*"
tokio = { version = "1.13.0", features = ["full"] }
tokio-util = { version = "*", features = ["codec"] }
redis = { version = "*", features = ["tokio-comp"] }
